# fhir-query-validator-factory

./: .coverage  .env.example  .gitignore  Makefile  README.md  create_showcase_doc.py  pyproject.toml
.github/workflows/: security.yml
.pytest_cache/v/cache/: nodeids
docs/: architecture.md  configuration.md  fhir-query-validator-factory-showcase.docx  glossary.md  loop-engineering.md  pitches.md  process-overview.md  public-test-servers.md  traceability.md
docs/adr/: 001-adk-agents-cli-multi-agent-loop.md
docs/code-documentation/: Makefile  architecture.rst  conf.py  installation.rst  introduction.rst  security.rst  workflow.rst
docs/code-documentation/api/: agents.rst  fhir_validator_agent.rst  index.rst  state.rst
docs/code-documentation/html/: README.html  (+7 more)
docs/codex-context/: CODEX_CONTEXT_PACKAGE.md  IMPLEMENTATION_GUIDELINES.md  PROJECT_BRIEF.md
docs/reviews/: owasp-security-review.md  spec-implementation-compliance-review.md
docs/spec/: cache-agent-spec.md  human-intervention-spec.md  query-execution-spec.md  query-validation-spec.md  rule-and-learner-spec.md
examples/notebooks/: demo_loops.ipynb
fhir_validator_agent/: agent.py
planning/: README.md  phase-3-scaffolding-core-agents.md  phase-4-loop-engineering.md
scripts/: _demo_utils.py  demo_adk_cli.py  demo_adk_web.py  demo_loops.py  demo_loops_mockhealth.py  demo_traceability.py
src/fhir_query_validator_factory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_full_workflow.py
tests/regression/: test_validation_regression.py
tests/unit/: test_adk_workflow.py  test_auth_provider.py  test_cache_agent.py  test_capability_interpreter.py  test_graph_nodes.py  test_human_gate.py  test_query_execution.py  test_query_parser.py  test_query_validator.py  test_rule_agent.py  test_search_learner.py  test_settings_auth.py  test_workflow_engine.py
(+96 files in other folders)
