[project]
name = "fhir-query-validator-factory"
version = "0.1.0"
description = "Demonstration of Software Factory principles with agentic FHIR query validation"
authors = [{ name = "Yogesh" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "authlib==1.7.2",
    "google-adk==2.3.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
adk-cli = [
    "google-agents-cli>=0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff",
    "bandit>=1.8",
    "pip-audit>=2.9",
]
observability = [
    "langfuse>=2.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
